--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.1.0",
     "nodemon": "^2.0.16",
